Criação dos nós

--- a/file-tree-example.html
+++ b/file-tree-example.html
@@ -23,11 +23,15 @@
 			data: files
 		})
 	</script>
-
-	<ul>
-		<li>
+<!--
+	<ul class="container-parent">
+		<li id="1">
 			<input class="checkButton" type="checkbox"/>
 			<ul class="container-childs">
+				<li id="2">
+					<input class="checkButton" type="checkbox"/>
+					<ul class="container-childs"></ul>
+				</li>
 			</ul>
 		</li>
 	</ul>
@@ -42,7 +46,7 @@
 		</li>
 		<li><input class="checkButton" type="checkbox"/></li>
 	</ul>
-
+-->
 
 </body>
 </html>
