Adicionando click quando clicar nos checks

--- a/file-tree-example.html
+++ b/file-tree-example.html
@@ -19,9 +19,7 @@
 			{id: 7, idParent: 3},
 			{id: 8, idParent: 3},
 		];
-		$("#fileTree").fileTree({
-			data: files
-		})
+		$("#fileTree").fileTree(null, files);
 	</script>
 <!--
 	<ul class="container-parent">
