--- a/file-tree-example.html
+++ b/file-tree-example.html
@@ -17,9 +17,13 @@
 			{id: 5, idParent: 2},
 			{id: 6, idParent: 2},
 			{id: 7, idParent: 3},
-			{id: 8, idParent: 3},
+			{id: 8, idParent: 4},
+			{id: 9, idParent: 4},
+			{id: 10, idParent: 4},
+			{id: 11, idParent: 5},
+			{id: 12, idParent: 5},
 		];
-		$("#fileTree").fileTree(null, files);
+		$("#fileTree").fileTree({initialData: files});
 	</script>
 <!--
 	<ul class="container-parent">
